--- a/alle-profiler.html
+++ b/alle-profiler.html
@@ -15,8 +15,8 @@
 		
 		<nav>
 			<ul>
-				<li><a href="alle-profiler.html">Alle profiler</a></li>
-				<li><a href="dagens-profil.html">Dagens profil</a></li>
+				<li><a href="valgfri-funksjonalitet.html">Øv deg på første date</a></li>
+				<li><a href="profil-forslag.html">Profilsøk</a></li>
 			</ul>
 		</nav>
 		
