--- a/alle-profiler.html
+++ b/alle-profiler.html
@@ -13,12 +13,12 @@
 			<h1>FindYourLove - Alle profiler</h1>
 		</header>
 		
-		<nav>
-			<ul>
-				<li><a href="valgfri-funksjonalitet.html">Øv deg på første date</a></li>
-				<li><a href="profil-forslag.html">Profilsøk</a></li>
-			</ul>
-		</nav>
+		<div id="link-bar">
+             
+            <a href="valgfri-funksjonalitet.html" class="content-link">ØV DEG PÅ FØRSTE DATE</a>
+            <a href="profil-forslag.html" class="content-link">PROFILSØK</a>
+			
+		</div>
 		
 	</div>
     
