--- a/profil-forslag.html
+++ b/profil-forslag.html
@@ -13,16 +13,16 @@
 			<h1>FindYourLove</h1>
 		</header>
 		
-		<nav>
-			<ul>
-				<li><a href="alle-profiler.html">Alle profiler</a></li>
-				<li><a href="valgfri-funksjonalitet.html">Øv deg på første date</a></li>
-			</ul>
-		</nav>
+		<div id="link-bar">
+             
+            <a href="valgfri-funksjonalitet.html" class="content-link">ØV DEG PÅ FØRSTE DATE</a>
+            <a href="profil-forslag.html" class="content-link">PROFILSØK</a>
+			
+		</div>
 		
 		<main>
 		
-			<section>
+			<section id="select_container">
 				<label>Tast inn ønsket alder</label>
 				<input type="text" id="age_selection"><br>
                 
